--- a/Wargame/Lord of SQL Injection/00. ReadMe.md
+++ b/Wargame/Lord of SQL Injection/00. ReadMe.md
@@ -5,17 +5,17 @@
 >
 >> ## 2. **Contents**
 >> There are many problems like them.  
->> 1. [gremlin](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/01.%20Gremlin.md)
->> 2. [cobolt](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/02.%20Cobolt.md)
->> 3. [goblin](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/03.%20Goblin.md)
->> 4. [orc](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/04.%20Orc.md)
->> 5. [wolfman](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/05.%20Wolfman.md)
->> 6. [darkelf](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/06.%20Darkelf.md)
->> 7. [orge](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/07.%20Orge.md)
->> 8. [troll](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/08.%20Troll.md)
+>> 1. [gremlin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/01.%20Gremlin.md)
+>> 2. [cobolt](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/02.%20Cobolt.md)
+>> 3. [goblin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/03.%20Goblin.md)
+>> 4. [orc](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/04.%20Orc.md)
+>> 5. [wolfman](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/05.%20Wolfman.md)
+>> 6. [darkelf](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/06.%20Darkelf.md)
+>> 7. [orge](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/07.%20Orge.md)
+>> 8. [troll](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/08.%20Troll.md)
 >> 9. vampire(troll 과 동일)
->> 10. [skeleton](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/10.%20Skeleton.md)
->> 11. golem
+>> 10. [skeleton](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/10.%20Skeleton.md)
+>> 11. [golem](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/11.%20Golem.md)
 >> 12. darkknight
 >> 13. bugbear
 >> 14. giant
