--- a/Wargame/Lord of SQL Injection/01. Gremlin.md
+++ b/Wargame/Lord of SQL Injection/01. Gremlin.md
@@ -1,7 +1,7 @@
 # **Gremlin**
 ## 1. What will we learn from this problem?
 This problem wants to make sure you know basic **SQL injection**.  
-  
+
 ## 2. Analize codes
     <?php
         include "./config.php";
@@ -35,8 +35,8 @@ Connect at database
 ### 4. preg_match()  
 This function is function to confirm that there is an element of the pattern. If this finds the pattern from str, it will stop to search.   
 This is Korean introduction about preg_match() from PHP_Manual.
-    
-    preg_match()는 pattern이 매치된 횟수를 반환합니다. 이는 0(매치 없음)이나 1입니다. preg_match()는 처음 매치 후에 검색을 중지하기 때문입니다. 대조적으로, preg_match_all()는 subject의 끝까지 계속해서 실행합니다. 에러가 발생하면, preg_match()는 FALSE를 반환합니다. 
+
+    preg_match()는 pattern이 매치된 횟수를 반환합니다. 이는 0(매치 없음)이나 1입니다. preg_match()는 처음 매치 후에 검색을 중지하기 때문입니다. 대조적으로, preg_match_all()는 subject의 끝까지 계속해서 실행합니다. 에러가 발생하면, preg_match()는 FALSE를 반환합니다.
 
 So, In this problem, you will be filtered like these,
 
@@ -46,7 +46,7 @@ If you use this string or char at GET parameter id or pw, you will see message l
 
 ### 5. $query
 This program will temporarily save query string at this variable.  
-    
+
     select id from prob_gremlin where id='{$_GET[id]}' and pw='{$_GET[pw]}'
 
 {$_GET[id]} and {$_GET[pw]} will be replaced by id and pw, GET parameter  
@@ -76,11 +76,11 @@ and @ is to ignore error mark.
 
 ### 8. if($result['id']) solve('gremlin');
 If we succeeded in getting an id through query, we can get data using 'field name' from result array. If we succeeded, we can solve this problem.  
-  
+
 ## 3. Solution
 I had mentioned for a moment, "can't we modulate this query?"  
 Main point of SQL injection is to **modulate query**.  
-  
+
 This is the query.
 
     select id from prob_gremlin where id='{$_GET[id]}' and pw='{$_GET[pw]}'
@@ -101,9 +101,9 @@ Then we can modulate this query using GET parameter 'id' and 'pw'
 
 ### Using Keyword
     ' | 1 | or
-  
-### In my case : 
-    id='or%201=1--%20 
+
+### In my case :
+    id='or%201=1--%20
 
     or
 
@@ -114,4 +114,4 @@ Then we can modulate this query using GET parameter 'id' and 'pw'
 
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
