--- a/Wargame/Lord of SQL Injection/04. Orc.md
+++ b/Wargame/Lord of SQL Injection/04. Orc.md
@@ -4,33 +4,33 @@ This problem wants to make sure you know basic **Blind SQL injection**
 ( In fact, I don't know exactly what it is. )
 
 ## 2. Analize codes
-    <?php 
-      include "./config.php"; 
-      login_chk(); 
-      dbconnect(); 
-      
-      if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
-        exit("No Hack ~_~"); 
-      
-      $query = "select id from prob_orc where id='admin' and pw='{$_GET[pw]}'"; 
-      
-      echo "<hr>query : <strong>{$query}</strong><hr><br>"; 
-      
-      $result = @mysql_fetch_array(mysql_query($query)); 
-      
-      if($result['id'])
-        echo "<h2>Hello admin</h2>"; 
+    <?php
+      include "./config.php";
+      login_chk();
+      dbconnect();
 
-      $_GET[pw] = addslashes($_GET[pw]); 
-      
-      $query = "select pw from prob_orc where id='admin' and pw='{$_GET[pw]}'"; 
-      
-      $result = @mysql_fetch_array(mysql_query($query)); 
-      
+      if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
+        exit("No Hack ~_~");
+
+      $query = "select id from prob_orc where id='admin' and pw='{$_GET[pw]}'";
+
+      echo "<hr>query : <strong>{$query}</strong><hr><br>";
+
+      $result = @mysql_fetch_array(mysql_query($query));
+
+      if($result['id'])
+        echo "<h2>Hello admin</h2>";
+
+      $_GET[pw] = addslashes($_GET[pw]);
+
+      $query = "select pw from prob_orc where id='admin' and pw='{$_GET[pw]}'";
+
+      $result = @mysql_fetch_array(mysql_query($query));
+
       if(($result['pw']) && ($result['pw'] == $_GET['pw']))
-        solve("orc"); 
-      
-      highlight_file(__FILE__); 
+        solve("orc");
+
+      highlight_file(__FILE__);
     ?>
 
 ### 1. preg_match()
@@ -52,10 +52,10 @@ We have to success to get pw field. Also, to clear this problem, we have to know
 
 ## 3. Solution
 In this problem, we can use almost functions except table name.  
-  
+
 We must use Python or other programming language.  
 ( Of course you can do every case. But it will be very hard )
-  
+
 You can use many functions of SQL.
 
 ### 3-1. **SUBSTR**, **ASCCI**
@@ -73,7 +73,7 @@ Ex) - "pw=if(1=1,1,0)" = "pw=1" // "pw=if(1=0,1,0)" = "pw=0"
 This function checks there is something using pattern.
 
     Wild Card
-        
+
         (pw is '1234')
 
         We can know length of string using char '_'
@@ -92,7 +92,7 @@ Using them, we can find out the 'pw'
 I made a simple python program to find 'pw' [__SOURCE__]()
 
 ### My Answers :
-    
+
     --- {} part will be replaced to other integer value ---
 
     ?pw=' or id=admin and pw like '{str}%25
@@ -101,8 +101,7 @@ I made a simple python program to find 'pw' [__SOURCE__]()
 
 If we can find string "Hello admin" from html page source,  
 the character or string, which we tried is part of string which we wanted.  
-  
+
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
-  
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
