--- a/Wargame/Lord of SQL Injection/06. Darkelf.md
+++ b/Wargame/Lord of SQL Injection/06. Darkelf.md
@@ -3,30 +3,30 @@
 or 과 and 없이 인젝션을 할 수 있는가?
 
 ## 2. 코드
-    <?php 
-      include "./config.php"; 
-      login_chk(); 
+    <?php
+      include "./config.php";
+      login_chk();
       dbconnect();  
 
       if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
-        exit("No Hack ~_~"); 
-      
+        exit("No Hack ~_~");
+
       if(preg_match('/or|and/i', $_GET[pw]))
-        exit("HeHe"); 
-        
-      $query = "select id from prob_darkelf where id='guest' and pw='{$_GET[pw]}'"; 
-      
-      echo "<hr>query : <strong>{$query}</strong><hr><br>"; 
-      
-      $result = @mysql_fetch_array(mysql_query($query)); 
-      
+        exit("HeHe");
+
+      $query = "select id from prob_darkelf where id='guest' and pw='{$_GET[pw]}'";
+
+      echo "<hr>query : <strong>{$query}</strong><hr><br>";
+
+      $result = @mysql_fetch_array(mysql_query($query));
+
       if($result['id'])
-        echo "<h2>Hello {$result[id]}</h2>"; 
-      
+        echo "<h2>Hello {$result[id]}</h2>";
+
       if($result['id'] == 'admin')
-        solve("darkelf"); 
-      
-      highlight_file(__FILE__); 
+        solve("darkelf");
+
+      highlight_file(__FILE__);
     ?>
 
 ### 1. preg_match()
@@ -55,9 +55,9 @@ or 과 and 없이 인젝션을 할 수 있는가?
     pw="password" and id="admin" 과 pw="password"&&id="admin" 은 같은 맥락이다.
 
 ### My Answers :
-    
+
     ?pw=' || id='admin
-      
+
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
