--- a/Wargame/Lord of SQL Injection/08. Troll.md
+++ b/Wargame/Lord of SQL Injection/08. Troll.md
@@ -7,23 +7,23 @@ PHP에서 취약한 함수를 알고 있는가?
 ## 2. 코드
 ```php
     <?php  
-      include "./config.php"; 
-      login_chk(); 
-      dbconnect(); 
+      include "./config.php";
+      login_chk();
+      dbconnect();
 
       if(preg_match('/\'/i', $_GET[id]))
         exit("No Hack ~_~");
-      
+
       if(@ereg("admin",$_GET[id]))
         exit("HeHe");
-      
+
       $query = "select id from prob_troll where id='{$_GET[id]}'";
       echo "<hr>query : <strong>{$query}</strong><hr><br>";
       $result = @mysql_fetch_array(mysql_query($query));
-      
+
       if($result['id'] == 'admin')
         solve("troll");
-      
+
       highlight_file(__FILE__);
     ?>
 ```
@@ -83,4 +83,4 @@ BINARY 함수를 이용해서 대소문자를 구분할 수 있습니다.
 
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
