--- a/Wargame/Lord of SQL Injection/00. ReadMe.md
+++ b/Wargame/Lord of SQL Injection/00. ReadMe.md
@@ -1,36 +1,36 @@
-> # **Los.eagle-jump.org**
->> ## 1. What is **Los.eagle-jump.org**?
->> This is one of the wargame sites. In short, it is a place to solve problems.
+# **Los.eagle-jump.org**
+## 1. What is **Los.eagle-jump.org**?
+> This is one of the wargame sites. In short, it is a place to solve problems.
 > This is made by someone named **rubiya**. In fact there is his facebook link at the bottom of the site.
 >
->> ## 2. **Contents**
->> There are many problems like them.  
->> 1. [gremlin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/01.%20Gremlin.md)
->> 2. [cobolt](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/02.%20Cobolt.md)
->> 3. [goblin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/03.%20Goblin.md)
->> 4. [orc](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/04.%20Orc.md)
->> 5. [wolfman](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/05.%20Wolfman.md)
->> 6. [darkelf](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/06.%20Darkelf.md)
->> 7. [orge](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/07.%20Orge.md)
->> 8. [troll](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/08.%20Troll.md)
->> 9. vampire(troll 과 동일)
->> 10. [skeleton](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/10.%20Skeleton.md)
->> 11. [golem](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/11.%20Golem.md)
->> 12. darkknight
->> 13. bugbear
->> 14. giant
->> 15. assassin
->> 16. zombie_assassin
->> 17. succubus
->> 18. nightmare
->> 19. xavis
->> 20. dragon
->> 21. iron_golem
->> 22. dark_eyes
->> 23. hell_fire(deleted)
->> 24. evil wizard(deleted)
->> 25. umaru
+## 2. **Contents**
+There are many problems like them.  
+>1. [gremlin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/01.%20Gremlin.md)
+> 2. [cobolt](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/02.%20Cobolt.md)
+> 3. [goblin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/03.%20Goblin.md)
+> 4. [orc](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/04.%20Orc.md)
+> 5. [wolfman](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/05.%20Wolfman.md)
+> 6. [darkelf](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/06.%20Darkelf.md)
+> 7. [orge](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/07.%20Orge.md)
+> 8. [troll](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/08.%20Troll.md)
+> 9. vampire(troll 과 동일)
+> 10. [skeleton](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/10.%20Skeleton.md)
+> 11. [golem](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/11.%20Golem.md)
+> 12. [darkknight](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/12.%20Darkknight.md)
+> 13. bugbear
+> 14. giant
+> 15. assassin
+> 16. zombie_assassin
+> 17. succubus
+> 18. nightmare
+> 19. xavis
+> 20. dragon
+> 21. iron_golem
+> 22. dark_eyes
+> 23. hell_fire(deleted)
+> 24. evil wizard(deleted)
+> 25. umaru
 >
->> ## 3. Opinion
->> The problems in this site is easier than other wargame because they give us the codes and query.
->> So, after we solved all of the problems, we have to study more.
+## 3. Opinion
+The problems in this site is easier than other wargame because they give us the codes and query.
+  So, after we solved all of the problems, we have to study more.
