--- a/Wargame/Lord of SQL Injection/00. ReadMe.md
+++ b/Wargame/Lord of SQL Injection/00. ReadMe.md
@@ -17,7 +17,7 @@ There are many problems like them.
 > 10. [skeleton](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/10.%20Skeleton.md)
 > 11. [golem](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/11.%20Golem.md)
 > 12. [darkknight](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/12.%20Darkknight.md)
-> 13. bugbear
+> 13. [bugbear](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/13.%20Bugbear.md)
 > 14. giant
 > 15. assassin
 > 16. zombie_assassin
