--- a/Wargame/Lord of SQL Injection/00. ReadMe.md
+++ b/Wargame/Lord of SQL Injection/00. ReadMe.md
@@ -18,8 +18,8 @@ There are many problems like them.
 > 11. [golem](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/11.%20Golem.md)
 > 12. [darkknight](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/12.%20Darkknight.md)
 > 13. [bugbear](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/13.%20Bugbear.md)
-> 14. giant
-> 15. assassin
+> 14. [giant](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/14.%20Giant.md)
+> 15. [assassin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/15.%20Assassin.md)
 > 16. zombie_assassin
 > 17. succubus
 > 18. nightmare
