LOS : 16 Zombie_Assassin

--- a/Wargame/Lord of SQL Injection/00. ReadMe.md
+++ b/Wargame/Lord of SQL Injection/00. ReadMe.md
@@ -27,8 +27,8 @@ There are many problems like them.
 > 20. dragon
 > 21. iron_golem
 > 22. dark_eyes
-> 23. hell_fire(deleted)
-> 24. evil wizard(deleted)
+> 23. <del>hell_fire(deleted)</del>
+> 24. <del>evil wizard(deleted)</del>
 > 25. umaru
 >
 ## 3. Opinion
