LOS : 21 Iron_Golem

--- a/Wargame/Lord of SQL Injection/19. Xavis.md
+++ b/Wargame/Lord of SQL Injection/19. Xavis.md
@@ -184,6 +184,8 @@ Password : [184, 249, 197, 176, 198, 208, 196, 161, 164, 187, 0, 0, 0, 0, 0, 0, 
 그래서 뒤에 있는 그냥 널값들을 제외 하고서는 python 코드로도 해보고 해당 아래 사이트에서도 utf 인코딩을 해보았다. 결론은 똑같아서 아 잘 출력했구나 생각했다!  
 결국엔 그리해서 클리어!!  
 
+(21 Iron_Golem 의 에러메시지에 의하면 los 는 utf32 를 사용한다. 그래서 length의 값으로 40을 반환한것 같다.)
+
 https://r12a.github.io/apps/conversion/
 
 **Lastly, There can be many answers**
