--- a/Wargame/Lord of SQL Injection/00. ReadMe.md
+++ b/Wargame/Lord of SQL Injection/00. ReadMe.md
@@ -20,16 +20,16 @@ There are many problems like them.
 > 13. [bugbear](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/13.%20Bugbear.md)
 > 14. [giant](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/14.%20Giant.md)
 > 15. [assassin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/15.%20Assassin.md)
-> 16. zombie_assassin
-> 17. succubus
-> 18. nightmare
-> 19. xavis
-> 20. dragon
-> 21. iron_golem
-> 22. dark_eyes
+> 16. [zombie_assassin](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/16.%20Zombie_Assassin.md)
+> 17. [succubus](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/17.%20Succubus.md)
+> 18. [nightmare](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/18.%20Nightmare.md)
+> 19. [xavis](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/19.%20Xavis.md)
+> 20. [dragon](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/20.%20Dragon.md)
+> 21. [iron_golem](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/21.%20Iron_Golem.md)
+> 22. [dark_eyes](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/22.%20Dark_Eyes.md)
 > 23. <del>hell_fire(deleted)</del>
 > 24. <del>evil wizard(deleted)</del>
-> 25. umaru
+> 25. [umaru](https://github.com/moreal/WriteUp/blob/master/Wargame/Lord%20of%20SQL%20Injection/25.%20Umaru.md)
 >
 ## 3. Opinion
 The problems in this site is easier than other wargame because they give us the codes and query.
